[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/Slimes/Job.gd" type="Script" id=1]
[ext_resource path="res://Font/UIFont.tres" type="Theme" id=2]
[ext_resource path="res://Font/UIFontDescription.tres" type="Theme" id=3]

[node name="JobButton" type="Button" groups=["Job"]]
margin_right = 440.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 436.0
margin_bottom = 36.0
custom_constants/separation = 5

[node name="JobName" type="Label" parent="VBoxContainer"]
margin_right = 432.0
margin_bottom = 11.0
theme = ExtResource( 2 )
text = "Collect"

[node name="JobOutput" type="Label" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 432.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "OUTPUT: sdad"

[connection signal="button_down" from="." to="." method="_on_JobButton_button_down"]
